added basic form and login hook

--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "reactjs-vite-tailwindcss-boilerplate",
-  "description": "This is a boilerplate build with Vite, React 18, TypeScript, Vitest, Testing Library, TailwindCSS 3, Eslint and Prettier.",
+  "description": "This is a take home assessment.",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "author": {
-    "name": "João Paulo Moraes",
-    "email": "joaopaulomoraes@outlook.com",
-    "url": "https://github.com/joaopaulomoraes"
-  },
-  "bugs": {
-    "url": "https://github.com/joaopaulomoraes/reactjs-vite-tailwindcss-boilerplate/issues",
-    "email": "joaopaulomoraes@outlook.com"
+    "name": "Matthew Kleven",
+    "email": "klevennb115@gmail.com",
+    "url": "https://github.com/klevenNB"
   },
   "scripts": {
     "dev": "vite",
@@ -23,6 +19,9 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
     "@tanstack/react-query": "^5.66.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
